--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.20.1",
         "sass-loader": "7.*",
+        "summernote": "^0.8.12",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "ckeditor": "^4.12.1"
     }
 }
