--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
+        "becker/laravel-zabbix-api": "^0.3.0",
         "ckeditor/ckeditor": "^4.13",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
